[Fix][Zeta] Restore JDK 8 compatibility of savepoint tests and registry
CI unit-test matrix runs on JDK 8 where Set.of/List.of/Map.of do not exist;
my previous local runs used JDK 11 so the compile error only surfaced in CI
(cannot find symbol: method of(int) on interface Set).

- Set.of(...) in LocalSavepointStorageTest/HdfsSavepointStorageTest ->
  new HashSet<>(Arrays.asList(...))
- List.of(...) in SavepointWireFixtures -> Arrays.asList(...)
- Map.of(...) in SavepointReaderRegistry -> Collections.unmodifiableMap
  with explicit HashMap

Verified with the JDK 8 toolchain: storage plugin modules, engine server
compile and the savepoint test suites pass (12 storage + 19 engine tests).